--- a/oving4/oppgave7.html
+++ b/oving4/oppgave7.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Øving 4</title>
   </head>
-  <body onload="tallTrekant()">
+  <body>
     <h2>Oppgave 7 (Frivillig)</h2>
     <div id="resultat"></div>
   </body>
   <script>
     // Tom global variabel som fylles lenger ned i koden
     let tall = '';
-    // Funksjon som kjøres ved body onload
-    let tallTrekant = () => {
       // Ytre for-løkke
       for (let x = 1; x <= 10; x++) {
         // Indre for-løkke
@@ -27,6 +25,5 @@
       }
       // Skriver ut resultatet
       resultat.innerText = tall;
-    };
   </script>
 </html>
