--- a/oving4/oppgave8.html
+++ b/oving4/oppgave8.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Øving 4</title>
   </head>
-  <body onload="tallTrekant()">
+  <body>
     <h2>Oppgave 8 (Frivillig)</h2>
     <div id="resultat"></div>
   </body>
@@ -18,20 +18,17 @@
     */
     // Tom global variabel som fylles lenger ned i koden
     let tall = '';
-    // Funksjon som kjøres ved body onload
-    let tallTrekant = () => {
-      // Ytre for-løkke
-      for (let x = 10; x >= 1; x--) {
-        // Indre for-løkke
-        for (let y = 1; y <= x; y++) {
-          // Fyller den tomme variablen "tall" med verdier
-          tall += ` ${y}`;
-        }
-        // Legger inn linjeskift
-        tall += '\n';
+    // Ytre for-løkke
+    for (let x = 10; x >= 1; x--) {
+      // Indre for-løkke
+      for (let y = 1; y <= x; y++) {
+        // Fyller den tomme variablen "tall" med verdier
+        tall += ` ${y}`;
       }
-      // Skriver ut resultatet
-      resultat.innerText = tall;
-    };
+      // Legger inn linjeskift
+      tall += '\n';
+    }
+    // Skriver ut resultatet
+    resultat.innerText = tall;
   </script>
 </html>
